--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,3 +6,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input[type=email], input[type=password] {
+    @apply rounded-lg border-gray-300;
+}
+
+input[type=submit] {
+    @apply text-sm font-semibold rounded-xl py-4 bg-indigo-600 text-white cursor-pointer transition;
+}
+input[type=submit]:hover {
+    @apply bg-indigo-500;
+}
