--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@
 @tailwind utilities;
 
 input[type=email], input[type=password] {
-    @apply rounded-lg border-gray-300;
+    @apply rounded-lg border-gray-300 focus:border-indigo-600;
 }
 
 input[type=submit] {
