--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,3 +17,14 @@ input[type=submit] {
 input[type=submit]:hover {
     @apply bg-indigo-500 dark:bg-emerald-400;
 } */
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
