--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,19 @@
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 /* Tailwind */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* * {
+    webkit-font-smoothing: antialiased; 
+    -webkit-font-smoothing: antialiased; 
+    text-rendering: optimizeLegibility; 
+    -moz-osx-font-smoothing: grayscale; 
+    text-shadow: rgba(0, 0, 0, .1) 0 0 1px;
+} */
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
