--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,27 +7,33 @@
 @tailwind components;
 @tailwind utilities;
 
-/* * {
-    webkit-font-smoothing: antialiased; 
-    -webkit-font-smoothing: antialiased; 
-    text-rendering: optimizeLegibility; 
-    -moz-osx-font-smoothing: grayscale; 
-    text-shadow: rgba(0, 0, 0, .1) 0 0 1px;
-} */
+.input {
+    @apply rounded-lg border-gray-200 dark:bg-myGray-700 dark:border-myGray-800;
+}
+
+.button-primary {
+    @apply text-white bg-blue-600 hover:bg-blue-500 dark:bg-purple-500 dark:hover:bg-purple-400;
+}
+
+.button-secondary {
+    @apply text-gray-400 hover:bg-gray-100 dark:hover:bg-myGray-700;
+}
+
+/* UTILITIES */
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.no-scrollbar::-webkit-scrollbar {
+/* .no-scrollbar::-webkit-scrollbar {
     display: none;
-}
+} */
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-}
+/* .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
+} */
 
 /* Add placeholder to contentEditable div */
-[contentEditable=true]:empty:not(:focus):before{
+/* [contentEditable=true]:empty:not(:focus):before{
     content:attr(data-placeholder);
     opacity: .5;
-}
+} */
